# amazon-freertos

./: CMakeLists.txt
lib/FreeRTOS/: queue.c  tasks.c
lib/FreeRTOS-Plus-POSIX/source/: FreeRTOS_POSIX_semaphore.c
lib/FreeRTOS/debug/: RtosTracing.cpp
lib/FreeRTOS/portable/GCC/ARM_CM4F/: port.c
lib/FreeRTOS/portable/GCC/ARM_CM4_MPU/: port.c
lib/include/: FreeRTOS.h  QueueDecl.h  RtosTracing.h  queue.h  task.h  taskDecl.h
lib/include/private/: projdefs.h
